# stm32f051-rust

./: Cargo.toml  openocd.cfg
.cargo/: config
src/: main.rs
src/timer/: mod.rs
