[package]
authors = ["Ryan Hartlage <ryanplusplus@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "stm32f051-rust"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
cortex-m-semihosting = "0.3.3"
panic-halt = "0.2.0"
stm32f0xx-hal = {version = "0.17.1", features = ["stm32f051"]}

# this lets you use `cargo fix`!
[[bin]]
name = "stm32f051-rust"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true
lto = true
